--- a/playbooks/edx-west/prod-app.yml
+++ b/playbooks/edx-west/prod-app.yml
@@ -18,24 +18,49 @@
     - "{{ secure_dir }}/vars/shib_prod_vars.yml"
     - "{{ secure_dir }}/vars/datadog_prod.yml"
   roles:
-    - role: gh_users
-      gh_users:
-        - sefk
-        - jbau
-        - jrbl
-        - ali123
-        - caesar2164
-        - dcadams
-        - nparlante
-        - jarv
-        - e0d
-        - feanil
-      gh_users_no_sudo:
-        - jinpa
-        - gbruhns
-      tags: users
     - common
     - supervisor
+    - role: user
+      USER_INFO:
+        - name: sefk
+          github: true
+          type: admin
+        - name: jbau
+          github: true
+          type: admin
+        - name: jrbl
+          github: true
+          type: admin
+        - name: ali123
+          github: true
+          type: admin
+        - name: caesar2164
+          github: true
+          type: admin
+        - name: dcadams
+          github: true
+          type: admin
+        - name: nparlante
+          github: true
+          type: admin
+        - name: stvstnfrd
+          github: true
+          type: admin
+        - name: jinpa
+          github: true
+        - name: gbruhns
+          github: true
+        - name: paepcke
+          github: true
+        - name: akshayka
+          github: true
+        - name: halawa
+          github: true
+        - name: amayalah
+          github: true
+        - name: mondiaz
+          github: true
+      tags: users
     - role: nginx
       nginx_sites:
         - lms
