--- a/playbooks/roles/nginx/defaults/main.yml
+++ b/playbooks/roles/nginx/defaults/main.yml
@@ -42,7 +42,7 @@ nginx_lms_preview_gunicorn_hosts:
 nginx_cms_gunicorn_hosts:
   - 127.0.0.1
 
-nginx_template_directory: ""
+nginx_template_directory: "edx/app/nginx/sites-available"
 
 nginx_cfg:
   #   - link - turn on
