--- a/playbooks/edx-west/stage-app.yml
+++ b/playbooks/edx-west/stage-app.yml
@@ -19,45 +19,6 @@
     - common
     - supervisor
     - role: user
-      USER_INFO:
-        - name: sefk
-          github: true
-          type: admin
-        - name: jbau
-          github: true
-          type: admin
-        - name: jrbl
-          github: true
-          type: admin
-        - name: ali123
-          github: true
-          type: admin
-        - name: caesar2164
-          github: true
-          type: admin
-        - name: dcadams
-          github: true
-          type: admin
-        - name: nparlante
-          github: true
-          type: admin
-        - name: stvstnfrd
-          github: true
-          type: admin
-        - name: jinpa
-          github: true
-        - name: gbruhns
-          github: true
-        - name: paepcke
-          github: true
-        - name: akshayka
-          github: true
-        - name: halawa
-          github: true
-        - name: amayalah
-          github: true
-        - name: mondiaz
-          github: true
       tags: users
     - role: nginx
       nginx_sites:
@@ -70,7 +31,8 @@
     - role: edxapp
       devstack: false
     - apache
-    - shibboleth
+    - role: shibboleth
+      tags: shib
     #- datadog
     #- splunkforwarder
 
