--- a/playbooks/edx-west/prod-worker.yml
+++ b/playbooks/edx-west/prod-worker.yml
@@ -16,53 +16,13 @@
   vars_files:
     - "{{ secure_dir }}/vars/edxapp_prod_vars.yml"
     - "{{ secure_dir }}/vars/xqueue_prod_vars.yml"
-    - "{{ secure_dir }}/vars/users.yml"
-#    - "{{ secure_dir }}/vars/edxapp_prod_users.yml"
+    - "{{ secure_dir }}/vars/edxapp_prod_users.yml"
 #    - "{{ secure_dir }}/vars/shib_prod_vars.yml"
     - "{{ secure_dir }}/vars/datadog_prod.yml"
   roles:
     - common
     - supervisor
     - role: user
-      USER_INFO:
-        - name: sefk
-          github: true
-          type: admin
-        - name: jbau
-          github: true
-          type: admin
-        - name: jrbl
-          github: true
-          type: admin
-        - name: ali123
-          github: true
-          type: admin
-        - name: caesar2164
-          github: true
-          type: admin
-        - name: dcadams
-          github: true
-          type: admin
-        - name: nparlante
-          github: true
-          type: admin
-        - name: stvstnfrd
-          github: true
-          type: admin
-        - name: jinpa
-          github: true
-        - name: gbruhns
-          github: true
-        - name: paepcke
-          github: true
-        - name: akshayka
-          github: true
-        - name: halawa
-          github: true
-        - name: amayalah
-          github: true
-        - name: mondiaz
-          github: true
       tags: users
     - role: edxapp
       celery_worker: True
