--- a/playbooks/edx-west/carnegie-prod-worker.yml
+++ b/playbooks/edx-west/carnegie-prod-worker.yml
@@ -18,26 +18,12 @@
     - "{{ secure_dir }}/vars/datadog_carn.yml"
     - "{{ secure_dir }}/vars/xqueue_carnegie_vars.yml"
   roles:
-    - role: gh_users
-      gh_users:
-        - sefk
-        - jbau
-        - jrbl
-        - ali123
-        - caesar2164
-        - dcadams
-        - nparlante
-        - jarv
-        - e0d
-        - feanil
-      gh_users_no_sudo:
-        - jinpa
-        - gbruhns
-      tags: users
     - role: 'common'
       tags: common
     - role: 'supervisor'
       tags: supervisor
+    - role: user
+      tags: users
     - role: 'edxapp'
       celery_worker: True
       devstack: false
