--- a/playbooks/edx-west/cme-prod-app.yml
+++ b/playbooks/edx-west/cme-prod-app.yml
@@ -29,23 +29,9 @@
     - "{{ secure_dir }}/vars/datadog_cme.yml"
   roles:
     #- ansible_debug
-    - role: gh_users
-      gh_users:
-        - sefk
-        - jbau
-        - jrbl
-        - ali123
-        - caesar2164
-        - dcadams
-        - nparlante
-        - jarv
-        - e0d
-        - feanil
-      gh_users_no_sudo:
-        - jinpa
-        - gbruhns
-      tags: users
     - common
+    - role: user
+      tags: users
     - supervisor
     - role: nginx
       nginx_sites:
