--- a/playbooks/edx-west/cme-prod-worker.yml
+++ b/playbooks/edx-west/cme-prod-worker.yml
@@ -20,24 +20,10 @@
 #    - "{{ secure_dir }}/vars/edxapp_prod_users.yml"
     - "{{ secure_dir }}/vars/datadog_cme.yml"
   roles:
-    - role: gh_users
-      gh_users:
-        - sefk
-        - jbau
-        - jrbl
-        - ali123
-        - caesar2164
-        - dcadams
-        - nparlante
-        - jarv
-        - e0d
-        - feanil
-      gh_users_no_sudo:
-        - jinpa
-        - gbruhns
-      tags: users
     - role: 'common'
       tags: common
+    - role: user
+      tags: users
     - role: 'supervisor'
       tags: supervisor
     - role: 'edxapp'
@@ -54,23 +40,23 @@
       tags: xqueue
     - datadog
 
-- name: Deploy certs only to first util machine
-  hosts: ~tag_Name_util(1)_cme
-  sudo: True
-  gather_facts: True
-  vars:
-    secure_dir: '../../../configuration-secure/ansible'
-    local_dir: "{{secure_dir}}/local"
-    migrate_db: "no"
-  vars_files:
-    - "roles/common/defaults/main.yml"
-    - "roles/supervisor/defaults/main.yml"
-    - "{{ secure_dir }}/vars/edxapp_cme_vars.yml"
-    - "{{ secure_dir }}/vars/certs_cme_vars.yml"
-  roles:
-    - role: certs
-      tags: certs
-
+#- name: Deploy certs only to first util machine
+#  hosts: ~tag_Name_util(1)_cme
+#  sudo: True
+#  gather_facts: True
+#  vars:
+#    secure_dir: '../../../configuration-secure/ansible'
+#    local_dir: "{{secure_dir}}/local"
+#    migrate_db: "no"
+#  vars_files:
+#    - "roles/common/defaults/main.yml"
+#    - "roles/supervisor/defaults/main.yml"
+#    - "{{ secure_dir }}/vars/edxapp_cme_vars.yml"
+#    - "{{ secure_dir }}/vars/certs_cme_vars.yml"
+#  roles:
+#    - role: certs
+#      tags: certs
+#
 # run the certificate agent on the first util machine only
 #- hosts: ~tag_Name_util10_cme
 #  sudo: True
