--- a/playbooks/roles/edxapp/tasks/deploy.yml
+++ b/playbooks/roles/edxapp/tasks/deploy.yml
@@ -26,6 +26,17 @@
     force=yes owner={{ edxapp_user }} mode=0600
   when: EDXAPP_USE_GIT_IDENTITY
 
+# We've experienced issues where git cannot do updates on the edx-platform
+# repo, maybe because it's too big?  Empirically these steps get the repo
+# back into better shape 
+# see: http://stackoverflow.com/questions/2998832/git-pull-fails-unable-to-resolve-reference-unable-to-update-local-ref)
+- name: local git repo cleanup (git gc --prune=now)
+  command: git gc --prune=now
+  chdir: {{ edxapp_code_dir }}
+- name: local git repo cleanup (git remote prune origin)
+  command: git remote prune origin
+  chdir: {{ edxapp_code_dir }}
+
 # Do A Checkout
 - name: checkout edx-platform repo into {{edxapp_code_dir}}
   git: >
