changed secrets directory name to 'edx-secret' to match actual name

--- a/playbooks/edx-west/carnegie-prod-app.yml
+++ b/playbooks/edx-west/carnegie-prod-app.yml
@@ -6,7 +6,7 @@
     when: "'app' not in machine"
   sudo: True
   vars:
-    secure_dir: '../../../configuration-secure/ansible'
+    secure_dir: '../../../edx-secret/ansible'
     # this indicates the path to site-specific (with precedence)
     # things like nginx template files
     #local_dir:  '../../../edx-secret/ansible/local'
