--- a/playbooks/roles/edxapp/defaults/main.yml
+++ b/playbooks/roles/edxapp/defaults/main.yml
@@ -498,7 +498,7 @@ generic_env_config:  &edxapp_generic_env
   EMAIL_PORT: $EDXAPP_EMAIL_PORT
   EMAIL_USE_TLS: $EDXAPP_EMAIL_USE_TLS
   FEATURES: $EDXAPP_FEATURES
-  WIKI_ENABLED: true
+  WIKI_ENABLED: false
   SYSLOG_SERVER:  $EDXAPP_SYSLOG_SERVER
   LOG_DIR:  "{{ COMMON_DATA_DIR }}/logs/edx"
   MEDIA_URL:  $EDXAPP_MEDIA_URL
