--- a/playbooks/x-omics.yml
+++ b/playbooks/x-omics.yml
@@ -13,9 +13,13 @@
     openid_workaround: True
     EDXAPP_LMS_NGINX_PORT: '80'
     edx_platform_version: 'master'
-    # These should stay false for the public AMI
-    COMMON_ENABLE_DATADOG: False
-    COMMON_ENABLE_SPLUNKFORWARDER: False
+    EDX_ANSIBLE_DUMP_VARS: true
+    CERTS_DOWNLOAD_URL: 'http://x-omics.org:18090'
+    CERTS_VERIFY_URL: 'http://x-omics.org:18090'
+    ora2_version: '{{ OPENEDX_RELEASE | default("master") }}'
+    certs_version: '{{ OPENEDX_RELEASE | default("master") }}'
+    forum_version: '{{ OPENEDX_RELEASE | default("master") }}'
+    xqueue_version: '{{ OPENEDX_RELEASE | default("master") }}'
   vars_files:
     - "group_vars/x-omics"
   roles:
